8351260: java.lang.AssertionError: Unexpected type tree: (ERROR) = (ERROR)